--- a/LogMergeRx/MainWindow.xaml
+++ b/LogMergeRx/MainWindow.xaml
@@ -75,7 +75,7 @@
             <GroupBox Header="Loaded files" Style="{StaticResource H1}">
                 <StackPanel>
                     <ListBox x:Name="AllFiles" ItemsSource="{Binding AllFiles}" SelectionMode="Extended"
-                         SelectionChanged="AllFiles_SelectionChanged" />
+                         SelectionChanged="AllFiles_SelectionChanged" DisplayMemberPath="Value" />
                     <TextBlock Text="Ctrl+Click to select multiple files" Style="{StaticResource ExplanationText}" />
                 </StackPanel>
             </GroupBox>
@@ -135,7 +135,7 @@
                                    local:HighlightHelper.Text="{Binding Message}"
                                    local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, ElementName=Root}"
                                    TextWrapping="Wrap"/>
-                        <TextBlock Grid.Column="3" Text="{Binding FileName}" Margin="3" />
+                        <TextBlock Grid.Column="3" Text="{Binding RelativePath}" Margin="3" />
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
