--- a/LogMergeRx/MainWindow.xaml
+++ b/LogMergeRx/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LogMergeRx"
         d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
-        Style="{DynamicResource CustomWindowStyle}"
+        Style="{DynamicResource DarkWindow}"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1000">
     <Window.Resources>
