--- a/LogMergeRx/MainWindow.xaml
+++ b/LogMergeRx/MainWindow.xaml
@@ -15,6 +15,8 @@
             Info="White"
             Notice="White"
             />
+        <local:FileIdMapper x:Key="FileIdMapper" />
+        <local:PathToBrushConverter x:Key="PathToBrushConverter" />
         <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <Style x:Key="Explanation" TargetType="Label">
             <Setter Property="FontSize" Value="10"/>
@@ -126,7 +128,7 @@
                 <GroupBox Header="Loaded files" Style="{StaticResource H1}">
                     <StackPanel>
                         <ListBox x:Name="AllFiles" ItemsSource="{Binding AllFiles}" SelectionMode="Extended"
-                            SelectionChanged="AllFiles_SelectionChanged">
+                            SelectionChanged="AllFiles_SelectionChanged" HorizontalContentAlignment="Stretch">
                             <ListBox.ItemContainerStyle>
                                 <Style TargetType="ListBoxItem">
                                     <Setter Property="ToolTip" Value="{Binding RelativePath.Value}" />
@@ -134,7 +136,15 @@
                             </ListBox.ItemContainerStyle>
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding RelativePath.Value}" />
+                                    <Grid>
+                                        <TextBlock Margin="8,0,0,0" Text="{Binding RelativePath.Value}" />
+                                        <Border VerticalAlignment="Stretch"
+                                                HorizontalAlignment="Left"
+                                                Width="8"
+                                                Margin="-2,0,0,0"
+                                                Background="{Binding FileId, Converter={StaticResource PathToBrushConverter }}"
+                                                />
+                                    </Grid>
                                 </DataTemplate>
                             </ListBox.ItemTemplate>
                         </ListBox>
@@ -159,15 +169,14 @@
                         </Grid.RowDefinitions>
                         <Grid Background="#343434">
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="8" />
                                 <ColumnDefinition Width="150" />
                                 <ColumnDefinition Width="70" />
                                 <ColumnDefinition />
-                                <!--<ColumnDefinition Width="200" />-->
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="Date" Margin="5,2" />
-                            <TextBlock Grid.Column="1" Text="Level" Margin="5,2"/>
-                            <TextBlock Grid.Column="2" Text="Message" Margin="5,2"/>
-                            <!--<TextBlock Grid.Column="3" Text="File Name" Margin="5,2"/>-->
+                            <TextBlock Grid.Column="1" Text="Date" Margin="5,2" />
+                            <TextBlock Grid.Column="2" Text="Level" Margin="5,2"/>
+                            <TextBlock Grid.Column="3" Text="Message" Margin="5,2"/>
                         </Grid>
                         <ScrollViewer Grid.Row="1" CanContentScroll="True" Focusable="False"
                                       HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
@@ -186,20 +195,32 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="8" />
                             <ColumnDefinition Width="150" />
                             <ColumnDefinition Width="70" />
                             <ColumnDefinition />
-                            <!--<ColumnDefinition Width="200" />-->
                         </Grid.ColumnDefinitions>
-                        <mvvm:SelectableTextBlock Grid.Column="0" Text="{Binding Date}" Margin="3" />
-                        <TextBlock Grid.Column="1" FontWeight="Bold" Margin="3"
+                        <Border VerticalAlignment="Stretch"
+                                HorizontalAlignment="Stretch"
+                                Background="{Binding FileId, Converter={StaticResource PathToBrushConverter}}">
+                            <Border.ToolTip>
+                                <MultiBinding Converter="{StaticResource FileIdMapper}">
+                                    <Binding Path="FileId" />
+                                    <Binding Path="DataContext.AllFiles" ElementName="Root" />
+                                </MultiBinding>
+                            </Border.ToolTip>
+                        </Border>
+
+                        <mvvm:SelectableTextBlock Grid.Column="1" Text="{Binding Date}" Margin="3" />
+
+                        <TextBlock Grid.Column="2" FontWeight="Bold" Margin="3"
                                    Text="{Binding Level}"
                                    Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}" />
-                        <mvvm:SelectableTextBlock Grid.Column="2" Margin="3"
+
+                        <mvvm:SelectableTextBlock Grid.Column="3" Margin="3"
                                    local:HighlightHelper.Text="{Binding Message}"
                                    local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, ElementName=Root}"
-                                   TextWrapping="Wrap"/>
-                        <!--<TextBlock Grid.Column="3" Text="{Binding RelativePath}" Margin="3" ToolTip="{Binding RelativePath}" />-->
+                                   TextWrapping="Wrap" />
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
